fix loi